[package]
name = "tool_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
tokio = { version = "1.21.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
chrono = "0.4.22"
axum = { version = "0.6.4", features = ["multipart", "ws"] }

futures = "*"
tower = { version = "*", features = ["util"] }
tower-http = { version = "*", features = ["limit", "trace"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }